--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.1.14",
     "bootstrap": "^5.3.8",
