feat: Add user authentication and profile management
- Added axios for API requests and user authentication.
- Implemented ProtectedRoute component for route protection.
- Created Profile page for user details and editing.
- Integrated login and registration functionality with authService.
- Added PropertyModal for viewing property details and favoriting.
- Updated Properties page to fetch properties and handle favorites.
- Enhanced Title component to show user info and logout option.
- Improved error handling and loading states in login and registration.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.22.0",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "boxicons": "^2.1.4",
     "react": "^19.1.1",
