--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.22.0",
+    "@google-cloud/local-auth": "^3.0.1",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "boxicons": "^2.1.4",
+    "gapi-script": "^1.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
